# KETI_IBMC_Feedback

./: .gitignore  CMakeLists.txt  README.md  feed-back-test.sh  feedback-build.sh
feedback-engine/: CMakeLists.txt  main.cpp
feedback-engine/handler/: feedback-server.cpp  feedback-server.h
include/: feedback-interface-adaptor.h  feedback.xml
system.d/: org.keti.DBus.Feedback.conf
